--- a/app/src/main/res/layout/activity_add_item_page.xml
+++ b/app/src/main/res/layout/activity_add_item_page.xml
@@ -138,7 +138,7 @@
             android:ems="15"
             android:hint="Quantity"
             android:background="@drawable/edit_text_bg"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:padding="15dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
@@ -155,7 +155,7 @@
             android:ems="15"
             android:hint="Barcode"
             android:background="@drawable/edit_text_bg"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:padding="15dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
@@ -259,16 +259,27 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edit_price_text" />
 
+        <Button
+            android:id="@+id/btn_register_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Register Item"
+            android:layout_marginTop="30dp"
+            android:padding="15dp"
+            android:backgroundTint="@color/dark_green"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edit_expiration_date_text"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/blank"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_expiration_date_text"
+            app:layout_constraintTop_toBottomOf="@+id/btn_register_item"
             android:padding="15dp">
         </TextView>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
